<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_activities"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="1"
        android:title="@string/activities" />

    <item
        android:id="@+id/action_near_me"
        android:icon="@drawable/ic_bubble"
        android:orderInCategory="2"
        android:title="@string/nearMe" />

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home"
        android:orderInCategory="3"
        android:title="@string/home" />


    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_person_ash"
        android:orderInCategory="4"
        android:title="@string/profile" />

    <item
        android:id="@+id/action_history"
        android:icon="@drawable/ic_history"
        android:orderInCategory="5"
        android:title="@string/history" />
</menu>