<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_gravity="center"
android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activities.auth.signup.SignupActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:src="@drawable/applogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:fontFamily="casual"
        android:text="@string/app_name"
        android:textColor="#7B1FA2"
        android:textScaleX="3"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginRight="24dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:includeFontPadding="true"
        android:padding="@dimen/eightDp"
        android:text="@string/sign_up_today_and_enjoy"
        android:textAlignment="center"
        android:textColor="@color/purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtfullNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:clipToPadding="false"
        android:dividerPadding="@dimen/eightDp"
        android:textColorHint="#7B1FA2"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="@dimen/twentyFourDp"
        app:boxCornerRadiusBottomStart="@dimen/twentyFourDp"
        app:boxCornerRadiusTopEnd="@dimen/twentyFourDp"
        app:boxCornerRadiusTopStart="@dimen/twentyFourDp"
        app:boxStrokeColor="#7B1FA2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_person_ash"
            android:drawablePadding="@dimen/eightDp"
            android:hint="@string/enter_full_name"
            android:importantForAutofill="yes"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/eightDp"
            android:paddingEnd="@dimen/eightDp"
            android:singleLine="true"
            android:textColor="@color/purple"
            android:textColorHint="@color/purple"
            android:drawableLeft="@drawable/ic_person_ash" />

        <requestFocus />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtEmailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:clipToPadding="false"
        android:dividerPadding="@dimen/eightDp"
        android:textColorHint="#7B1FA2"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="@dimen/twentyFourDp"
        app:boxCornerRadiusBottomStart="@dimen/twentyFourDp"
        app:boxCornerRadiusTopEnd="@dimen/twentyFourDp"
        app:boxCornerRadiusTopStart="@dimen/twentyFourDp"
        app:boxStrokeColor="#7B1FA2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtfullNameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email_ash"
            android:drawablePadding="@dimen/eightDp"
            android:hint="@string/enter_email"
          android:importantForAutofill="yes"
            android:inputType="textEmailAddress"
            android:imeOptions="actionDone"
            android:paddingStart="@dimen/eightDp"
            android:paddingEnd="@dimen/eightDp"
            android:singleLine="true"
            android:textColor="@color/purple"
            android:drawableLeft="@drawable/ic_email_ash" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnNext"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eightyDp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/eightyDp"
        android:layout_weight="1"
        android:background="@drawable/curvebotton"
        android:drawableEnd="@drawable/ic_right"
        android:drawableRight="@drawable/ic_right"
        android:includeFontPadding="false"
        android:onClick="gotoNext"
        android:padding="@dimen/eightDp"
        android:text="@string/next"
        android:textAlignment="inherit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailLayout" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/already_have_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtEmailLayout"
        app:layout_constraintTop_toBottomOf="@+id/btnNext"
        android:layout_marginLeft="32dp" />

    <TextView
        android:id="@+id/txtLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="casual"
        android:text="@string/log_in"
        android:onClick="gotoLogin"
        android:textColor="@color/purple"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/btnNext"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        android:layout_marginLeft="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>